--- a/index.html
+++ b/index.html
@@ -22,7 +22,53 @@
 
     <!--******* main part**** -->
     <main>
-
+        <section>
+            <div class="container">
+                <div class="image">
+                    <img src="images/person.png" alt="">
+                </div>
+                <div class="containar-info">
+                    <h1 class="containar-info-title">My failures of <br> previous year</h1>
+                    <p class="containar-info-des">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.</p>
+                    <div class="tick-info">
+                        <p><span style="color: green;">&#x2713 </span>Contrary to popular belief, is not simply.</p>
+                        <p><span style="color: green;">&#x2713 </span>Contrary to popular belief.</p>
+                        <p><span style="color: green;">&#x2713 </span>Contrary to popular , is not simply.</p>
+                        <p><span style="color: green;">&#x2713 </span>Contrary to popular belief, is not simply.</p>
+                        <p><span style="color: green;">&#x2713 </span>Contrary to popular simply.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- my plans part -->
+        <section>
+            <h1 class="plans">My Plans</h1>
+            <div class="plans-container">
+                <div>
+                    <img src="images/icons/web.png" alt="">
+                    <h1 class="plans-title">Web Development</h1>
+                    <p class="want-to">I want to start</p>
+                </div>
+                <div>
+                    <img src="images/icons/js.png" alt="">
+                    <h1 class="plans-title">JavaScript</h1>
+                    <p class="want-to">I want to learn</p>
+                </div>
+                <div>
+                    <img src="images/icons/smoke.png" alt="">
+                    <h1 class="plans-title">Smoking Habit</h1>
+                    <p class="want-to">I want to end</p>
+                </div>
+                <div>
+                    <img src="images/icons/ecom.png" alt="">
+                    <h1 class="plans-title">ecommerce</h1>
+                    <p class="want-to">I want to develop</p>
+                </div>
+            </div>
+        </section>
+        <section>
+            
+        </section>
     </main>
 
     <!--******** footer******* -->
