--- a/index.html
+++ b/index.html
@@ -67,7 +67,12 @@
             </div>
         </section>
         <section>
-            
+            <div class="contant">
+                <div class="contant-info">
+                    <h1 class="contant-title">Awlays keep a positive <br> mindset</h1>
+                    <button class="btton">Call Now</button>
+                </div>
+            </div>
         </section>
     </main>
 
