--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
-    <header>
+    <header class="headerd">
         <div class="header">
             <div class="header-info">
                 <h1 class="header-title">All Thinks Are <br> Possible If You <br> Believe</h1>
@@ -40,7 +40,7 @@
                 </div>
             </div>
         </section>
-        <!-- my plans part -->
+        <!-- *********my plans part ********* -->
         <section>
             <h1 class="plans">My Plans</h1>
             <div class="plans-container">
@@ -67,7 +67,7 @@
             </div>
         </section>
         <section>
-            <div class="contant">
+            <div class="contants">
                 <div class="contant-info">
                     <h1 class="contant-title">Awlays keep a positive <br> mindset</h1>
                     <button class="btton">Call Now</button>
@@ -77,5 +77,27 @@
     </main>
 
     <!--******** footer******* -->
+
+    <footer>
+        <div class="footer-container">
+            <div class="footer-container-dis">
+                <h1 class="futer">Future</h1>
+                <p class="footer-pera">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
+                <p class="footer-pera">Email : info@gmail.com</p>
+                <p style="margin-top: 16px;">Phone : 01500 00 00 00</p>
+                <div class="icons">
+                    <img src="images/icons/fb.png" alt="">
+                    <img src="images/icons/twitter.png" alt="">
+                    <img src="images/icons/youtube.png" alt="">
+                </div>
+            </div>
+            <div class="footer-input">
+                <h2>Subscribe</h2>
+                <input  type="email" name="" id="" placeholder="Enter your Email">
+                <br>
+                <button class="sub-btn">Submit</button>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
